--- a/devel/addon/kyverno/policy.yaml
+++ b/devel/addon/kyverno/policy.yaml
@@ -4,7 +4,8 @@ metadata:
   annotations:
     policies.kyverno.io/category: Pod Security Standards (Restricted)
     policies.kyverno.io/description: Privilege escalation, such as via set-user-ID
-      or set-group-ID file mode, should not be allowed.
+      or set-group-ID file mode, should not be allowed. This policy ensures the `allowPrivilegeEscalation`
+      fields are either undefined or set to `false`.
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
   name: deny-privilege-escalation
@@ -38,7 +39,8 @@ metadata:
     policies.kyverno.io/category: Pod Security Standards (Baseline)
     policies.kyverno.io/description: Capabilities permit privileged actions without
       giving full root access. Adding capabilities beyond the default set must not
-      be allowed.
+      be allowed. This policy ensures users cannot add any additional capabilities
+      to a Pod.
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
   name: disallow-add-capabilities
@@ -53,18 +55,18 @@ spec:
     name: capabilities
     validate:
       message: Adding of additional capabilities beyond the default set is not allowed.
-        The fields spec.containers[*].securityContext.capabilities.add and  spec.initContainers[*].securityContext.capabilities.add
+        The fields spec.containers[*].securityContext.capabilities.add and spec.initContainers[*].securityContext.capabilities.add
         must be empty.
       pattern:
         spec:
           =(initContainers):
           - =(securityContext):
               =(capabilities):
-                X(add): null
+                X(add): "null"
           containers:
           - =(securityContext):
               =(capabilities):
-                X(add): null
+                X(add): "null"
   validationFailureAction: enforce
 ---
 apiVersion: kyverno.io/v1
@@ -75,7 +77,8 @@ metadata:
     policies.kyverno.io/description: Host namespaces (Process ID namespace, Inter-Process
       Communication namespace, and network namespace) allow access to shared information
       and can be used to elevate privileges. Pods should not be allowed access to
-      host namespaces.
+      host namespaces. This policy ensures fields which make use of these host namespaces
+      are set to `false`.
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
   name: disallow-host-namespaces
@@ -103,9 +106,10 @@ kind: Policy
 metadata:
   annotations:
     policies.kyverno.io/category: Pod Security Standards (Baseline)
-    policies.kyverno.io/description: HostPath volumes let pods use host directories
+    policies.kyverno.io/description: HostPath volumes let Pods use host directories
       and volumes in containers. Using host resources can be used to access shared
-      data or escalate privileges and should not be allowed.
+      data or escalate privileges and should not be allowed. This policy ensures no
+      hostPath volumes are in use.
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
   name: disallow-host-path
@@ -134,7 +138,7 @@ metadata:
     policies.kyverno.io/category: Pod Security Standards (Baseline)
     policies.kyverno.io/description: Access to host ports allows potential snooping
       of network traffic and should not be allowed, or at minimum restricted to a
-      known list.
+      known list. This policy ensures the `hostPort` fields are empty.
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
   name: disallow-host-ports
@@ -166,7 +170,8 @@ metadata:
   annotations:
     policies.kyverno.io/category: Pod Security Standards (Baseline)
     policies.kyverno.io/description: Privileged mode disables most security mechanisms
-      and must not be allowed.
+      and must not be allowed. This policy ensures Pods do not call for privileged
+      mode.
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
   name: disallow-privileged-containers
@@ -198,7 +203,8 @@ metadata:
   annotations:
     policies.kyverno.io/category: Pod Security Standards (Baseline)
     policies.kyverno.io/description: SELinux options can be used to escalate privileges
-      and should not be allowed.
+      and should not be allowed. This policy ensures that the `seLinuxOptions` field
+      is undefined.
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/title: Disallow SELinux
@@ -234,7 +240,8 @@ metadata:
   annotations:
     policies.kyverno.io/category: Pod Security Standards (Baseline)
     policies.kyverno.io/description: The default /proc masks are set up to reduce
-      attack surface and should be required.
+      attack surface and should be required. This policy ensures nothing but the default
+      procMount can be specified.
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
   name: require-default-proc-mount
@@ -250,7 +257,7 @@ spec:
     validate:
       message: Changing the proc mount from the default is not allowed. The fields
         spec.containers[*].securityContext.procMount and spec.initContainers[*].securityContext.procMount
-        must not be changed  from `Default`.
+        must not be changed from `Default`.
       pattern:
         spec:
           =(initContainers):
@@ -267,7 +274,9 @@ metadata:
   annotations:
     policies.kyverno.io/category: Pod Security Standards (Restricted)
     policies.kyverno.io/description: Containers should be forbidden from running with
-      a root primary or supplementary GID.
+      a root primary or supplementary GID. This policy ensures the `runAsGroup`, `supplementalGroups`,
+      and `fsGroup` fields are set to a number greater than zero (i.e., non root).
+    policies.kyverno.io/minversion: 1.3.6
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
   name: require-non-root-groups
@@ -281,9 +290,9 @@ spec:
         - Pod
     name: check-runasgroup
     validate:
-      message: "Running with root group IDs is disallowed. The fields\t spec.securityContext.runAsGroup,
-        spec.containers[*].securityContext.runAsGroup,\t and spec.initContainers[*].securityContext.runAsGroup
-        must be empty\t or greater than zero."
+      message: Running with root group IDs is disallowed. The fields spec.securityContext.runAsGroup,
+        spec.containers[*].securityContext.runAsGroup, and spec.initContainers[*].securityContext.runAsGroup
+        must be empty or greater than zero.
       pattern:
         spec:
           =(initContainers):
@@ -300,13 +309,12 @@ spec:
         - Pod
     name: check-supplementalGroups
     validate:
-      message: "Adding of supplemental group IDs is not allowed. The field\t spec.securityContext.supplementalGroups
-        must not be defined."
+      message: Adding of supplemental group IDs is not allowed. The field spec.securityContext.supplementalGroups
+        must not be defined.
       pattern:
         spec:
           =(securityContext):
-            =(supplementalGroups):
-            - "null"
+            =(supplementalGroups): '>0'
   - match:
       resources:
         kinds:
@@ -327,7 +335,7 @@ metadata:
   annotations:
     policies.kyverno.io/category: Pod Security Standards (Restricted)
     policies.kyverno.io/description: Containers must be required to run as non-root
-      users.
+      users. This policy ensures `runAsNonRoot` is set to `true`.
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
   name: require-run-as-non-root
@@ -369,8 +377,9 @@ metadata:
   annotations:
     policies.kyverno.io/category: Pod Security Standards (Baseline)
     policies.kyverno.io/description: On supported hosts, the 'runtime/default' AppArmor
-      profile is applied by default.  The default policy should prevent overriding
-      or disabling the policy, or restrict  overrides to an allowed set of profiles.
+      profile is applied by default. The default policy should prevent overriding
+      or disabling the policy, or restrict overrides to an allowed set of profiles.
+      This policy ensures Pods do not specify any other AppArmor profiles than `runtime/default`.
     policies.kyverno.io/minversion: 1.3.0
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod, Annotation
@@ -400,7 +409,9 @@ metadata:
   annotations:
     policies.kyverno.io/category: Pod Security Standards (Restricted)
     policies.kyverno.io/description: The runtime default seccomp profile must be required,
-      or only specific additional profiles should be allowed.
+      or only specific additional profiles should be allowed. This policy, requiring
+      Kubernetes v1.19 or later, ensures that only the `RuntimeDefault` or `Localhost`
+      is used as a `type` and that it is not unset.
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/title: Restrict Seccomp
@@ -413,24 +424,40 @@ spec:
       resources:
         kinds:
         - Pod
-    name: seccomp
+    name: restrict-seccomp
     validate:
+      anyPattern:
+      - spec:
+          securityContext:
+            seccompProfile:
+              type: RuntimeDefault | Localhost
+      - spec:
+          containers:
+          - securityContext:
+              seccompProfile:
+                type: RuntimeDefault | Localhost
       message: Use of custom Seccomp profiles is disallowed. The fields spec.securityContext.seccompProfile.type,
         spec.containers[*].securityContext.seccompProfile.type, and spec.initContainers[*].securityContext.seccompProfile.type
-        must be unset or set to `runtime/default`.
-      pattern:
-        spec:
+        must be set to `RuntimeDefault` or `Localhost`.
+  - match:
+      resources:
+        kinds:
+        - Pod
+    name: restrict-seccomp-initcontainers
+    validate:
+      anyPattern:
+      - spec:
+          securityContext:
+            seccompProfile:
+              type: RuntimeDefault | Localhost
+      - spec:
           =(initContainers):
-          - =(securityContext):
-              =(seccompProfile):
-                =(type): runtime/default
-          =(securityContext):
-            =(seccompProfile):
-              =(type): runtime/default
-          containers:
-          - =(securityContext):
-              =(seccompProfile):
-                =(type): runtime/default
+          - securityContext:
+              seccompProfile:
+                type: RuntimeDefault | Localhost
+      message: Use of custom Seccomp profiles is disallowed. The fields spec.securityContext.seccompProfile.type,
+        spec.containers[*].securityContext.seccompProfile.type, and spec.initContainers[*].securityContext.seccompProfile.type
+        must be set to `RuntimeDefault` or `Localhost`.
   validationFailureAction: enforce
 ---
 apiVersion: kyverno.io/v1
@@ -441,7 +468,8 @@ metadata:
     policies.kyverno.io/description: Sysctls can disable security mechanisms or affect
       all containers on a host, and should be disallowed except for an allowed "safe"
       subset. A sysctl is considered safe if it is namespaced in the container or
-      the Pod, and it is isolated from other Pods or processes on the same Node.
+      the Pod, and it is isolated from other Pods or processes on the same Node. This
+      policy ensures that only those "safe" subsets can be specified in a Pod.
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
   name: restrict-sysctls
@@ -474,7 +502,8 @@ metadata:
     policies.kyverno.io/category: Pod Security Standards (Restricted)
     policies.kyverno.io/description: In addition to restricting HostPath volumes,
       the restricted pod security profile limits usage of non-core volume types to
-      those defined through PersistentVolumes.
+      those defined through PersistentVolumes. This policy blocks a number of different
+      non-core volume types as named.
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
   name: restrict-volume-types
